force-app/main/default/objects/RETS_Product_Order__c/RETS_Product_Order__c.object-meta.xml
<CustomObject>
    <label>RETS Product Order</label>
    <nameField>
        <displayFormat>RETS-{0000000}</displayFormat>
        <label>Order ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RETS Product Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>