force-app/main/default/objects/RETS_Product_Order__c/fields/Agent_Office__c.field-meta.xml
<CustomField>
    <fullName>Agent_Office__c</fullName>
    <formula>Agent__r.Related_Location_Broker_Office__r.Name</formula>
    <label>Agent Office</label>
    <type>Text</type>
</CustomField>