force-app/main/default/objects/RETS_Product_Order__c/fields/Broker_Of_Record__c.field-meta.xml
<CustomField>
    <fullName>Broker_Of_Record__c</fullName>
    <label>Broker Of Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>