force-app/main/default/objects/RETS_Product_Order__c/fields/Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Brokerage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brokerage</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Company_Type__c</field>
            <operation>equals</operation>
            <value>Broker Office</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Residential</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RETS Product Orders (Brokerage)</relationshipLabel>
    <relationshipName>RETS_Product_Orders_Brokerage</relationshipName>
    <type>Lookup</type>
</CustomField>