force-app/main/default/objects/RETS_Product_Order__c/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <label>Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reconciliation</fullName>
            </value>
            <value>
                <fullName>Broker Authorization Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>