force-app/main/default/objects/RETS_Product_Order__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Date at which order become inactive</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>