force-app/main/default/objects/RETS_Product_Order__c/fields/ImportSource__c.field-meta.xml
<CustomField>
    <fullName>ImportSource__c</fullName>
    <description>Import Source to assist migration</description>
    <label>Import Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>