force-app/main/default/objects/RETS_Product_Order__c/fields/ImportSourceID__c.field-meta.xml
<CustomField>
    <fullName>ImportSourceID__c</fullName>
    <description>Import Source ID to assist migration</description>
    <label>Import Source ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>