force-app/main/default/objects/RETS_Product_Order__c/fields/Is_External_Billing__c.field-meta.xml
<CustomField>
    <fullName>Is_External_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is External Billing</label>
    <type>Checkbox</type>
</CustomField>