force-app/main/default/objects/RETS_Product_Order__c/fields/On_Behalf_of_Agent__c.field-meta.xml
<CustomField>
    <fullName>On_Behalf_of_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>On Behalf of Agent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Subscriptions__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>RETS Product Orders (On Behalf of Agent)</relationshipLabel>
    <relationshipName>RETS_Product_Orders_OnBehalf</relationshipName>
    <type>Lookup</type>
</CustomField>