force-app/main/default/objects/RETS_Product_Order__c/fields/OnActivationAgentOffice__c.field-meta.xml
<CustomField>
    <fullName>OnActivationAgentOffice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Upon activation, if this is an agent order, the Account ID of the Agent&apos;s current related location.</description>
    <label>On Activation Agent Office</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RETS Product Orders (On Activation Agent Office)</relationshipLabel>
    <relationshipName>RETS_Product_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>