force-app/main/default/objects/RETS_Product_Order__c/fields/OnActivationBrokerofRecord__c.field-meta.xml
<CustomField>
    <fullName>OnActivationBrokerofRecord__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Upon activation, for either agent or brokerage order, the the Subscriber who represents the either the agent&apos;s BOR for the Brokerage or the Brokerage&apos;s BOR.</description>
    <label>On Activation Broker of Record</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>RETS Product Orders (On Activation Broker of Record)</relationshipLabel>
    <relationshipName>RETS_Product_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>