force-app/main/default/objects/RETS_Product_Order__c/fields/OnActivationSubProductName__c.field-meta.xml
<CustomField>
    <fullName>OnActivationSubProductName__c</fullName>
    <description>Upon activation, record the current name of the RETS Sub Product</description>
    <label>On Activation Sub Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>