force-app/main/default/objects/RETS_Product_Order__c/fields/RETS_Billing_Exclusion__c.field-meta.xml
<CustomField>
    <fullName>RETS_Billing_Exclusion__c</fullName>
    <label>RETS Billing Exclusion</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Brokerage</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>