force-app/main/default/objects/RETS_Product_Order__c/fields/RETS_Sub_Product__c.field-meta.xml
<CustomField>
    <fullName>RETS_Sub_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RETS Sub Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RETS_Sub_Products__c.Vendor_Product__c</field>
            <operation>equals</operation>
            <valueField>$Source.Vendor_Product__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RETS_Sub_Products__c</referenceTo>
    <relationshipLabel>RETS Product Orders</relationshipLabel>
    <relationshipName>RETS_Product_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>