force-app/main/default/objects/RETS_Product_Order__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date of active order</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>