force-app/main/default/objects/RETS_Product_Order__c/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled by Vendor</fullName>
            </value>
            <value>
                <fullName>Cancelled by Subscriber</fullName>
            </value>
            <value>
                <fullName>Subscriber Auto Suspended</fullName>
            </value>
            <value>
                <fullName>Subscriber Terminated</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Misreported</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>