force-app/main/default/objects/RETS_Product_Order__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>