force-app/main/default/objects/RETS_Product_Order__c/fields/Vendor_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Email_Address__c</fullName>
    <label>Vendor Email Address</label>
    <type>Email</type>
</CustomField>