force-app/main/default/objects/RETS_Product_Order__c/fields/Vendor_Order_Description__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Order_Description__c</fullName>
    <label>Vendor Order Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>