force-app/main/default/objects/RETS_Product_Order__c/fields/Vendor_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Order_ID__c</fullName>
    <label>Vendor Order ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>