force-app/main/default/objects/RETS_Product_Order__c/fields/Vendor_Product__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>RETS</value>
        </filterItems>
        <filterItems>
            <field>Account.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RETS Product Orders</relationshipLabel>
    <relationshipName>RETS_Product_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>