force-app/main/default/objects/RETS_Product_Order__c/fields/ZuoraIntegrationBypassFlag__c.field-meta.xml
<CustomField>
    <fullName>ZuoraIntegrationBypassFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to bypass integration on activation or inactivation for Agent or Brokerage</description>
    <label>Zuora Integration Bypass Flag</label>
    <type>Checkbox</type>
</CustomField>