force-app/main/default/objects/RETS_Product_Order__c/fields/ZuoraIntegrationStatus__c.field-meta.xml
<CustomField>
    <fullName>ZuoraIntegrationStatus__c</fullName>
    <label>Zuora Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
            <value>
                <fullName>Skipped for Agent or Brokerage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>