force-app/main/default/objects/RETS_Product_Order__c/fields/ZuoraIntegrationStatusMessage__c.field-meta.xml
<CustomField>
    <fullName>ZuoraIntegrationStatusMessage__c</fullName>
    <description>Success or Failure message for Agent or Brokerage</description>
    <label>Zuora Integration Status Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>