force-app/main/default/objects/RETS_Product_Order__c/fields/ZuoraSubscriptionID__c.field-meta.xml
<CustomField>
    <fullName>ZuoraSubscriptionID__c</fullName>
    <description>ID of the corresponding Zuora Subscription for Agent or Brokerage</description>
    <label>Zuora Subscription ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>