force-app/main/default/objects/RETS_Product_Order__c/fields/ZuoraVendorIntegrationBypassFlag__c.field-meta.xml
<CustomField>
    <fullName>ZuoraVendorIntegrationBypassFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to bypass integration on activation or inactivation for Vendor Product</description>
    <label>Zuora Vendor Integration Bypass Flag</label>
    <type>Checkbox</type>
</CustomField>