force-app/main/default/objects/RETS_Product_Order__c/fields/ZuoraVendorIntegrationStatusMessage__c.field-meta.xml
<CustomField>
    <fullName>ZuoraVendorIntegrationStatusMessage__c</fullName>
    <description>Success or Failure message</description>
    <label>Zuora Vendor Integration Status Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>