force-app/main/default/objects/RETS_Product_Order__c/fields/ZuoraVendorProductIntegrationStatus__c.field-meta.xml
<CustomField>
    <fullName>ZuoraVendorProductIntegrationStatus__c</fullName>
    <label>Zuora Vendor Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
            <value>
                <fullName>true</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>