force-app/main/default/objects/RETS_Product_Order__c/validationRules/Agent_should_not_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Agent_should_not_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK( Agent__c ),
NOT(ISBLANK(  On_Behalf_of_Agent__c ))
)</errorConditionFormula>
    <errorDisplayField>Agent__c</errorDisplayField>
    <errorMessage>Agent should not be blank when the order is made on behalf of another agent</errorMessage>
</ValidationRule>