force-app/main/default/objects/RETS_Product_Order__c/validationRules/AgentOrBroker_Validate.validationRule-meta.xml
<ValidationRule>
    <fullName>AgentOrBroker_Validate</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Brokerage__c))  &amp;&amp; NOT(ISBLANK(Agent__c))</errorConditionFormula>
    <errorMessage>Please give either Broker or Agent</errorMessage>
</ValidationRule>