force-app/main/default/objects/RETS_Product_Order__c/validationRules/Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Status</fullName>
    <active>true</active>
    <errorConditionFormula>OR( 
   AND(
      ISPICKVAL(PRIORVALUE(Status__c),&quot;Inactive&quot;),
      NOT(ISPICKVAL(Status__c,&quot;Inactive&quot;))
      ),
   AND(
      ISPICKVAL(PRIORVALUE(Status__c),&quot;Active&quot;), 
      ISPICKVAL(Status__c,&quot;In Progress&quot;)
   )
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status can not be changed from InActive to Other and Active to In Progress</errorMessage>
</ValidationRule>